--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "homepage": "https://github.com/cod3gen/audiofilters#readme",
   "devDependencies": {
-    "esbuild": "^0.21.5",
-    "typescript": "^5.5.4"
+    "esbuild": "^0.21.5"
   }
 }
