--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cod3gen/audiofilters",
-  "version": "0.1.2",
+  "version": "0.1.0",
   "description": "Audio filter design utilities (biquad PEQ/shelves, crossover families, RIAA) for Node.js",
   "type": "module",
   "main": "dist/index.cjs",
@@ -22,17 +22,7 @@
     "demo": "node ./demo/demo.js",
     "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "audio",
-    "dsp",
-    "biquad",
-    "filters",
-    "peq",
-    "linkwitz-riley",
-    "butterworth",
-    "bessel",
-    "riaa"
-  ],
+  "keywords": ["audio", "dsp", "biquad", "filters", "peq", "linkwitz-riley", "butterworth", "bessel", "riaa"],
   "author": "",
   "license": "MIT",
   "repository": {
@@ -44,6 +34,6 @@
   },
   "homepage": "https://github.com/cod3gen/audiofilters#readme",
   "devDependencies": {
-    "esbuild": "^0.21.5"
+    "esbuild": "^0.25.9"
   }
 }
