--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cod3gen/audiofilters",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Audio filter design utilities (biquad PEQ/shelves, crossover families, RIAA) for Node.js",
   "type": "module",
   "main": "dist/index.cjs",
@@ -9,8 +9,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+  "require": "./dist/index.cjs"
     }
   },
   "files": [
@@ -22,17 +21,7 @@
     "demo": "node ./demo/demo.js",
     "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "audio",
-    "dsp",
-    "biquad",
-    "filters",
-    "peq",
-    "linkwitz-riley",
-    "butterworth",
-    "bessel",
-    "riaa"
-  ],
+  "keywords": ["audio", "dsp", "biquad", "filters", "peq", "linkwitz-riley", "butterworth", "bessel", "riaa"],
   "author": "",
   "license": "MIT",
   "repository": {
